Fixed the alignment of everything

--- a/css/styles.css
+++ b/css/styles.css
@@ -110,7 +110,7 @@ header {
     margin-bottom: -1px;
     margin-left: 62px; }
   header img.logo {
-    margin-top: 2vw; }
+    margin-top: 5px; }
 
 nav {
   background-color: #c7f0f3;
@@ -119,8 +119,8 @@ nav {
   justify-content: center;
   max-width: 72rem;
   margin: auto;
-  padding-top: 0.6666666667vw;
-  padding-bottom: 0.6666666667vw; }
+  padding-top: 1.6666666667px;
+  padding-bottom: 1.6666666667px; }
   nav ul {
     text-decoration: none;
     display: flex;
@@ -150,7 +150,7 @@ main {
   main img.HeroImg {
     width: 100%; }
   main img.HeroImg {
-    margin-bottom: 2vw;
+    margin-bottom: 5px;
     contain: content; }
   main div#div1 {
     display: grid;
@@ -166,84 +166,93 @@ main {
       flex-direction: column;
       text-align: left;
       justify-content: center;
-      margin-bottom: 4vw;
+      margin-bottom: 10px;
       font-size: 16px; }
       main div#div1 ul#bestList li {
         margin-left: 33%; }
     main div#div1 div#div11 {
-      margin-right: 2vw;
-      padding-left: 2vw; }
+      margin-right: 5px;
+      padding-left: 45px;
+      margin-left: 5px; }
       main div#div1 div#div11 h1#Expecth1 {
         font-size: 26px;
-        padding-bottom: 2vw;
-        padding-top: 2vw;
+        padding-bottom: 5px;
+        padding-top: 5px;
         font-weight: 400; }
       main div#div1 div#div11 h2 {
         font-size: 13px;
-        margin-bottom: 2vw;
+        margin-bottom: 5px;
         font-weight: 100; }
     main div#div1 div#div12 {
       text-align: right;
-      padding: 2vw; }
+      padding: 5px;
+      padding-right: 0;
+      padding-right: 45px; }
       main div#div1 div#div12 h1#ourFormula {
         font-size: 26px;
-        padding-bottom: 2vw; }
+        padding-bottom: 5px; }
       main div#div1 div#div12 h2 {
         font-size: 20px; }
     main div#div1 h1#h1Success {
       font-size: 36px;
-      padding-top: 2vw; }
+      padding-top: 5px; }
 
 div.moreAboutUs {
   display: grid;
   background-color: #c7f0f3;
   grid-template-columns: 1fr 1fr; }
   div.moreAboutUs div {
-    margin: 2vw; }
+    margin: 5px; }
   div.moreAboutUs div {
     text-align: center; }
   div.moreAboutUs img {
     width: 33vw;
-    margin-top: 4vw; }
+    margin-top: 10px; }
   div.moreAboutUs div h2 {
     text-align: left; }
   div.moreAboutUs p, div.moreAboutUs h2 {
-    margin-right: 6vw;
-    margin-left: 6vw; }
+    margin-right: 45px;
+    margin-left: 45px; }
 
 div#gridAreas h1 {
   font-size: 32px;
   font-weight: 300;
   color: #0480b1;
   letter-spacing: 2px;
-  margin-top: 4vw;
+  margin-top: 10px;
   margin-bottom: -15px;
-  margin-left: 2vw; }
+  margin-left: 5px;
+  padding-left: 45px; }
 div#gridAreas h2 {
   color: #0480b1;
   font-size: 26px;
-  padding-top: 15px;
+  padding-top: 5px;
   padding-bottom: 8px;
   font-weight: 300; }
 div#gridAreas p {
   font-size: 13px;
   width: auto;
-  text-align: left; }
+  text-align: left;
+  padding-bottom: 15px; }
+div#gridAreas h2, div#gridAreas p {
+  margin: 0;
+  margin-left: 45px;
+  margin-right: 45px; }
 
 div.AU1 {
   display: grid;
   width: auto;
   grid-template-columns: 1fr;
   grid-column: 1/ span 1;
-  margin: 2vw;
+  margin: 5px;
   text-align: center; }
   div.AU1 img {
     width: 34vw;
     justify-content: center;
-    margin: 2vw; }
+    margin: 5px; }
   div.AU1 p, div.AU1 h2 {
-    margin-right: 5vw;
-    margin-left: 5vw;
+    margin-right: 12.5px;
+    margin-left: 12.5px;
     text-align: left; }
 
 div.AU2 {
@@ -251,16 +260,16 @@ div.AU2 {
   grid-column: 2/ span 1;
   width: auto;
   grid-auto-columns: auto;
-  margin: 2vw;
+  margin: 5px;
   text-align: center; }
   div.AU2 img {
     width: 34vw;
     justify-content: center;
     text-align: center;
-    margin: 2vw; }
+    margin: 5px; }
   div.AU2 p, div.AU2 h2 {
-    margin-right: 5vw;
-    margin-left: 5vw;
+    margin-right: 12.5px;
+    margin-left: 12.5px;
     text-align: left; }
 
 div#AboutUsTwo {
@@ -271,20 +280,21 @@ div#AboutUsTwo {
 
 div#Tech {
   grid-column: 1/ span 4;
-  margin: 2vw; }
+  margin: 5px;
+  padding-left: 35px; }
   div#Tech h2 {
     text-align: left;
-    margin-right: 6vw;
-    margin-left: 4vw; }
+    margin-right: 15px;
+    margin-left: 10px; }
   div#Tech p {
     text-align: left;
     width: auto;
-    margin-right: 6vw;
-    margin-left: 4vw; }
+    margin-right: 15px;
+    margin-left: 10px; }
 
 div#pricing img {
-  width: 37vw;
-  margin: 3vw; }
+  width: 34vw;
+  margin-top: 45px; }
 
 div#pricing {
   grid-row: 3/ span 1;
@@ -345,11 +355,17 @@ footer {
     grid-template-columns: 1fr 1fr 1fr; }
 
   div.moreAboutUs {
-    grid-template-columns: 1fr 1fr 1fr 1fr; }
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    margin: 0;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-bottom: 15px; }
     div.moreAboutUs img {
       width: auto; }
     div.moreAboutUs h2, div.moreAboutUs p {
-      margin: 0; }
+      margin: 0;
+      margin-left: 25px;
+      margin-right: 25px; }
 
   div#AboutUsTwo {
     margin: 0;
@@ -358,29 +374,38 @@ footer {
       width: auto; }
     div#AboutUsTwo h2, div#AboutUsTwo p {
       margin: 0;
-      margin-right: 2vw;
-      margin-left: 2vw; }
+      margin-left: 50px;
+      margin-right: 50px; }
 
   div#logos img {
     margin: 0; }
 
   div#pricing {
-    margin-top: -1vw;
+    margin-top: -2.5px;
     grid-row: 1/ span 2;
     grid-column: 3/ span 1;
     display: flex;
-    flex-direction: column; }
+    flex-direction: column;
+    margin-right: 15px; }
     div#pricing button {
-      width: 50%;
+      width: 55%;
       margin-bottom: 12px;
-      margin-top: -120px; }
-
-  div.AU {
-    grid-row: 1;
-    grid-column: span 1; }
+      margin-right: 0;
+      margin-left: 0;
+      align-self: center; }
+    div#pricing img {
+      margin-top: 0;
+      padding-top: 0;
+      vertical-align: top;
+      width: 87%;
+      margin: 0;
+      padding: 0;
+      align-content: center;
+      align-self: center; }
 
   div#Tech {
-    grid-column: 1/ span 2; }
+    grid-column: 1/ span 2;
+    padding-left: 0; }
     div#Tech h2 {
       text-align: left; }
 
@@ -392,7 +417,7 @@ footer {
       grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
       grid-template-rows: 1fr; }
     div#logos img {
-      padding: 2vw;
+      padding: 5px;
       vertical-align: bottom;
       width: auto; }
 
