--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -3,4 +3,4 @@ $secondaryColor: #329;
 $tritaryColor: #f48;
 $navColor: #293;
 $fontColor: #0480b1;
-$gutter: 2vw;
+$gutter: 5px;
